[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ivy-core"
version = "1.1.10"
description = """A Python package for building and managing data pipelines. It provides a high-level API for creating and managing data pipelines, as well as a number of features to help you debug and optimize your pipelines."""
authors = ["Unify AI <info@unify.ai>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "~=1.22"
einops = "~=0.4.1"
psutil = "~=5.9.1"
termcolor = "~=1.1.0"
colorama = "~=0.4.5"
packaging = "~=21.3"
nvidia-ml-py = "~=11.495.46"

[tool.poetry.dev-dependencies]
pytest = "latest"
coverage = "latest"

[tool.poetry.extras]
applied = [
    "kornia",
    "torch-geometric",
    "botorch",
    "gpytorch",
    "gradslam",
    "fastai",
    "pytorch-lightning",
    "tensorly",
    "thinc",
    "transformers",
    "accelerate",
    "diffusers",
    "timm",
    "flax",
    "flower",
    "rllib",
    "seaborn",
    "datasets",
    "validator"
]
gpu = [
    "h5py",
    "pytest",
    "networkx",
    "hypothesis",
    "pymongo",
    "redis",
    "matplotlib",
    "opencv-python",
    "jax",
    "jaxlib",
    "tensorflow",
    "tensorflow-addons",
    "tensorflow-probability",
    "torch",
    "torch-scatter",
    "functorch",
    "scipy",
    "dm-haiku",
    "pydriller",
    "tqdm",
    "coverage"
]
m1_1 = [
    "h5py",
    "pytest",
    "networkx",
    "hypothesis",
    "pymongo",
    "redis",
    "matplotlib",
    "opencv-python",
    "jax",
    "jaxlib",
    "tensorflow-macos",
    "tensorflow-addons",
    "tensorflow-probability",
    "torch"
]
m1_2 = [
    "torch-scatter",
    "functorch",
    "scipy",
    "dm-haiku",
    "protobuf",
    "pydriller",
    "tqdm",
    "coverage"
]

[tool.poetry.scripts]
build = "poetry build"
install = "poetry install"
run = "poetry run"
test = "poetry run pytest"